# rknn_camera

./: README.md
examples/RetinaFace/: camera_test_retinaface.sh
examples/RetinaFace/cpp/: CMakeLists.txt  camera_opencv_demo.cc
examples/RetinaFace/model/: RetinaFace.rknn
examples/RetinaFace/python/: RetinaFace_chinese.py  RetinaFace_simple.py
install/rk356x_linux_aarch64/rknn_RetinaFace_demo/: rknn_retinaface_demo
